# SBEL-catkin-workspace

./: .gitignore  .pull.bash  .push.bash  README.md
autonomous_workspace/src/ch_ros/: CMakeLists.txt  package.xml
autonomous_workspace/src/ch_ros/bags/: euler.bag
autonomous_workspace/src/ch_ros/config/: ch_ros.yaml
autonomous_workspace/src/ch_ros/include/ch_ros/: ChRosMessages.fbs  ch_interface.h  ch_ros_handler.h  ch_transport.h  publisher.h  publishers.h  sensor_manager.h
autonomous_workspace/src/ch_ros/launch/: ch_ros.launch  demo.launch  euler.launch
autonomous_workspace/src/ch_ros/src/: ch_ros_handler.cpp  sensor_manager.cpp
autonomous_workspace/src/common/common_srvs/: CMakeLists.txt  package.xml
autonomous_workspace/src/common/common_srvs/srv/: ConeMap.srv
autonomous_workspace/src/control/control_utilities/: CMakeLists.txt  package.xml
autonomous_workspace/src/interface/arduino_interface/: CMakeLists.txt  package.xml
autonomous_workspace/src/interface/arduino_interface/launch/: arduino_interface.launch  arduino_interface_wheel.launch
autonomous_workspace/src/interface/arduino_interface/src/: main.cpp  serial_handler.cpp
catkin/src/chrono_ros/: CMakeLists.txt  chrono.cpp  chrono_ros_vehicle.cpp  package.xml
catkin/src/chrono_ros/include/chrono_ros/: chrono_ros_driver.h  chrono_ros_vehicle.h
catkin/src/chrono_ros/src/: chrono_ros.cpp
chrono_workspace/src/ch_interface/: CMakeLists.txt  package.xml  setup.py
chrono_workspace/src/ch_interface/config/: ch_interface.yaml
chrono_workspace/src/ch_interface/include/ch_interface/: ch_interface.h
chrono_workspace/src/ch_interface/launch/: ch_interface.launch
chrono_workspace/src/ch_interface/scripts/: ch_launch
chrono_workspace/src/ch_interface/src/: ch_interface.cpp  ch_transport_manager.cpp  main.cpp
chrono_workspace/src/ch_interface/src/flatbuffer/: ch_flatbuffer_converter.cpp
chrono_workspace/src/ch_interface/src/transport/: ch_publisher.cpp  ch_subscriber.cpp  ch_transport.cpp  ch_transport_manager.cpp
chrono_workspace/src/chrono/: CMakeLists.txt  package.xml
chrono_workspace/src/chrono/include/chrono/: ch_interface.h  ch_interface_messages.fbs  flatbuffer_converter.cpp
chrono_workspace/src/chrono/src/: ch_interface.cpp  ch_transport.cpp  ch_transport_manager.cpp  main.cpp
first_catkin/src/basic_shape_tutorial/: CMakeLists.txt  package.xml
first_catkin/src/first_package/: CMakeLists.txt  package.xml
first_catkin/src/first_package/src/: talker.cpp
first_catkin/src/path_publisher/: CMakeLists.txt  package.xml
ros_workspace/src/ch_ros/: CMakeLists.txt  package.xml  setup.py
ros_workspace/src/ch_ros/config/: demo.yaml
ros_workspace/src/ch_ros/include/ch_ros/: ChROSMessages.fbs  ChROSMessages_generated.h  ChRosMessages_generated.h  RosMessages.fbs  RosMessages_generated.h  ch_message_codes.h  ch_ros_handler.h  protobuf_messages.pb.h  protobuf_messages.proto  publishers.h
ros_workspace/src/ch_ros/launch/: ch_ros.launch  demo.launch  demo2.launch  euler_test.launch  tcp_test.launch  test_launch.launch
ros_workspace/src/ch_ros/scripts/: ch_camera_test_launch  ch_launch  ch_tcp_test  ch_test_launch  rosbag_record
ros_workspace/src/ch_ros/src/: ch_ros.cpp  ch_ros_handler.cpp  protobuf_messages.pb.cc  protobuf_messages.proto  publishers.cpp
ros_workspace/src/estimation/: CMakeLists.txt  package.xml
ros_workspace/src/estimation/custom/: CMakeLists.txt
ros_workspace/src/estimation/custom/src/: velocity_estimator.cpp
ros_workspace/src/estimation/dead_reckoning/: CMakeLists.txt  package.xml
ros_workspace/src/estimation/dead_reckoning/launch/: dead_reckoning.launch
ros_workspace/src/estimation/dead_reckoning/src/: main.cpp
ros_workspace/src/estimation/ekf/: CMakeLists.txt  package.xml
ros_workspace/src/estimation/ekf/src/: main.cpp
ros_workspace/src/estimation/kalman_filter/: CMakeLists.txt  package.xml
ros_workspace/src/estimation/kalman_filter/src/: kalman_estimation.cpp  main.cpp
ros_workspace/src/estimation/orientation/: CMakeLists.txt  package.xml
ros_workspace/src/estimation/orientation/src/: main.cpp
ros_workspace/src/estimation/ros_localization/: CMakeLists.txt
ros_workspace/src/estimation/ros_localization/launch/: v1.launch
udp_workspace/src/chrono_com/: CMakeLists.txt  UDPClient.cpp  package.xml
udp_workspace/src/chrono_com/launch/: client_server_test.launch
udp_workspace/src/chrono_com/src/: chrono_com.cpp  client2.cpp  server.cpp  server2.cpp
udp_workspace/src/chrono_ros_com/: CMakeLists.txt
udp_workspace/src/chrono_ros_com/lib/: ConePublisher.cpp  GPSPublisher.cpp  IMUPublisher.cpp  LidarPublisher.cpp  MessageHandler.cpp  ProtobufMessages.pb.cc  ProtobufMessages.proto
udp_workspace/src/chrono_ros_com/src/: chrono_ros_com.cpp
udp_workspace/src/chrono_ros_interface/: CMakeLists.txt  package.xml
udp_workspace/src/chrono_ros_interface/ChROS/: MessageHandler.cpp  MessagePublisher.cpp
udp_workspace/src/chrono_ros_interface/msg/: Cones.msg
udp_workspace/src/chrono_ros_interface/src/: main.cpp
udp_workspace/src/demo_chrono_ros/: CMakeLists.txt  setup.py
udp_workspace/src/demo_chrono_ros/launch/: demo.launch  demo2.launch
udp_workspace/src/demo_chrono_ros/scripts/: syn_server  syn_vehicle
udp_workspace/src/msg_converter/: CMakeLists.txt
udp_workspace/src/msg_converter/src/: cones_to_markers.cpp  gps_to_odom.cpp  gps_to_pose.cpp
udp_workspace/src/path_follower/: CMakeLists.txt
udp_workspace/src/path_follower/src/: pid_follower.cpp
udp_workspace/src/udp_test/: CMakeLists.txt
udp_workspace/src/udp_test/launch/: client_server_test.launch
udp_workspace/src/udp_test/lib/: client.cpp  server.cpp
udp_workspace/src/udp_test/src/: udp_client.cpp  udp_server.cpp
workspace/src/chrono_ros/: CMakeLists.txt  chrono_ros_launcher.cpp  chrono_ros_path_follower_launcher.cpp  package.xml
workspace/src/chrono_ros/launch/: chrono_ros.launch
workspace/src/chrono_ros/src/: chrono_ros.cpp  chrono_ros_path_follower.cpp
workspace/src/path_follower/: CMakeLists.txt  package.xml
workspace/src/path_follower/nodes/: path_follower
(+603 files in other folders)
