<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>ch_ros</name>
  <version>0.0.0</version>
  <description>
    ch_ros package
  </description>

  <license>TODO</license>
  <author>TODO</author>
  <maintainer email="TODO@TODO.com">TODO</maintainer>

  <depend>common_msgs</depend>
  <depend>common_srvs</depend>
  <depend>image_transport</depend>


  <buildtool_depend>catkin</buildtool_depend>
</package>
