<?xml version="1.0"?>
<package format="2">
  <name>first_package</name>
  <version>0.1.0</version>
  <description>
    This is my first package creation in ROS melodic
  </description>

  <maintainer email="aryoung5@wisc.edu">Aaron Young</maintainer>
  <license>BSD</license>
  <author email="aryoung5@wisc.edu">Aaron Young</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msg</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msg</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
