<?xml version="1.0"?>
<package format="2">
  <name>path_publisher</name>
  <version>0.0.0</version>
  <description> This is a path_publisher package </description>

  <license>BSD</license>
  <author email="aaron@TODO.com">Aaron Young</author>
  <maintainer email="aaron@TODO.com">Aaron Young </maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>

  </export>
</package>
