<?xml version="1.0"?>
<package format="2">
  <name>chrono_ros_interface</name>
  <version>0.0.0</version>
  <description> chrono_ros_interface package </description>

  <author email="TODO@TODO.com">TODO</author>
  <maintainer email="TODO@TODO.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
