<?xml version="1.0"?>
<package format="2">
  <name>path_follower</name>
  <version>0.0.0</version>
  <description> This is the path_follower package </description>

  <license>TODO</license>

  <author email="TODO@todo.com">Aaron Young</author>
  <maintainer email="TODO@todo.com">Aaron Young</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
