<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>common_srvs</name>
  <version>0.0.0</version>
  <description> common_srvs package </description>

  <license>TODO</license>
  <author>TODO</author>
  <maintainer email="TODO@TODO.TODO">TODO</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
