<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name> control_utilities </name>
  <version>0.0.0</version>
  <description> control_utilities package </description>

  <license>TODO</license>
  <author>TODO</author>
  <maintainer email="TODO@TODO.TODO">TODO</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
</package>
